# Page-Analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  tools.py  validator.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: index.html  urls.html
