[tool.poetry]
name = "hexlett-code"
version = "0.1.0"
description = "Website that analyzes the specified pages for SEO suitability"
authors = ["MaxKtv <maximkutiaev@outlook.com>"]
readme = "README.md"
repository = "https://github.com/MaxKtv/python-project-83.git"
packages = [
    { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
