[tool.poetry]
name = "hexlett-code"
version = "0.1.0"
description = "Website that analyzes the specified pages for SEO suitability"
authors = ["MaxKtv <maximkutiaev@outlook.com>"]
readme = "README.md"
repository = "https://github.com/MaxKtv/python-project-83.git"
packages = [
    { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
validators = "^0.33.0"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
